--- a/src/css/payBuyList.css
+++ b/src/css/payBuyList.css
@@ -1,5 +1,5 @@
 .pay-buy-list {
-  background-color: #fff;
+  background-color: #ffffff;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -7,300 +7,333 @@
 }
 
 .pay-buy-list .div {
-  background-color: #fff;
-  width: 830.69px;
-  height: 1138.59;
+  background-color: #ffffff;
+  height: 1975.16px;
   position: relative;
+  width: 1440px;
 }
 
 .pay-buy-list .pay-item {
+  background-color: #eeeeeeee;
+  height: 472px;
+  left: 62px;
   position: absolute;
-  width: 759px;
-  height: 272px;
-  top: 218px;
-  left: 36px;
-  background-color: #eee;
+  top: 448px;
+  width: 1317px;
 }
 
 .pay-buy-list .item-info {
+  background-color: #ffffff;
+  height: 396px;
+  left: 108px;
   position: absolute;
-  width: 627px;
-  height: 228px;
-  top: 24px;
-  left: 62px;
-  background-color: #fff;
+  top: 41px;
+  width: 1088px;
 }
 
 .pay-buy-list .overlap {
-  position: absolute;
-  width: 332px;
-  height: 45px;
-  top: 64px;
-  left: 22px;
   background-color: #d9d9d9;
+  height: 77px;
+  left: 38px;
+  position: absolute;
+  top: 111px;
+  width: 575px;
 }
 
 .pay-buy-list .text-wrapper {
-  width: 134px;
-  top: 6px;
-  left: 6px;
-  white-space: nowrap;
-  position: absolute;
+  color: #000000;
   font-family: "Inter-Regular", Helvetica;
+  font-size: 44.2px;
   font-weight: 400;
-  color: #000;
-  font-size: 25.5px;
+  left: 11px;
   letter-spacing: 0;
   line-height: normal;
+  position: absolute;
+  top: 10px;
+  white-space: nowrap;
+  width: 233px;
 }
 
 .pay-buy-list .overlap-group {
-  position: absolute;
-  width: 332px;
-  height: 45px;
-  top: 120px;
-  left: 22px;
   background-color: #d9d9d9;
+  height: 77px;
+  left: 38px;
+  position: absolute;
+  top: 208px;
+  width: 575px;
 }
 
 .pay-buy-list .div-wrapper {
-  position: absolute;
-  width: 332px;
-  height: 45px;
-  top: 176px;
-  left: 22px;
   background-color: #d9d9d9;
-}
-
-.pay-buy-list .overlap-2 {
+  height: 77px;
+  left: 38px;
   position: absolute;
-  width: 332px;
-  height: 45px;
-  top: 8px;
-  left: 20px;
-  background-color: #d9d9d9;
+  top: 305px;
+  width: 575px;
 }
 
 .pay-buy-list .text-wrapper-2 {
-  width: 134px;
-  top: 6px;
-  left: 8px;
-  white-space: nowrap;
-  position: absolute;
+  color: #000000;
   font-family: "Inter-Regular", Helvetica;
+  font-size: 44.2px;
   font-weight: 400;
-  color: #000;
-  font-size: 25.5px;
+  left: 11px;
   letter-spacing: 0;
   line-height: normal;
+  position: absolute;
+  top: 11px;
+  white-space: nowrap;
+  width: 233px;
 }
 
-.pay-buy-list .image-box {
+.pay-buy-list .overlap-2 {
+  background-color: #d9d9d9;
+  height: 77px;
+  left: 35px;
   position: absolute;
-  width: 211px;
-  height: 211px;
-  top: 9px;
-  left: 395px;
-  background-color: #d6d6d6;
-}
-
-.pay-buy-list .overlap-3 {
-  position: absolute;
-  width: 26px;
-  height: 33px;
-  top: 24px;
-  left: 711px;
-  background-color: #fff;
+  top: 13px;
+  width: 575px;
 }
 
 .pay-buy-list .text-wrapper-3 {
-  position: absolute;
-  width: 23px;
-  top: 0;
-  left: 4px;
+  color: #000000;
   font-family: "Inter-Regular", Helvetica;
+  font-size: 44.2px;
   font-weight: 400;
-  color: #000;
-  font-size: 25.5px;
+  left: 15px;
   letter-spacing: 0;
   line-height: normal;
+  position: absolute;
+  top: 10px;
+  white-space: nowrap;
+  width: 233px;
+}
+
+.pay-buy-list .image-box {
+  background-color: #d6d6d6;
+  height: 366px;
+  left: 686px;
+  position: absolute;
+  top: 16px;
+  width: 366px;
+}
+
+.pay-buy-list .overlap-3 {
+  background-color: #ffffff;
+  height: 57px;
+  left: 1233px;
+  position: absolute;
+  top: 41px;
+  width: 46px;
 }
 
 .pay-buy-list .text-wrapper-4 {
-  top: 1px;
-  position: absolute;
-  width: 23px;
-  left: 4px;
+  color: #000000;
   font-family: "Inter-Regular", Helvetica;
+  font-size: 44.2px;
   font-weight: 400;
-  color: #000;
-  font-size: 25.5px;
+  left: 7px;
   letter-spacing: 0;
   line-height: normal;
+  position: absolute;
+  top: 1px;
+  width: 39px;
 }
 
-.pay-buy-list .pay-item-2 {
+.pay-buy-list .overlap-4 {
+  height: 57px;
+  left: 32px;
   position: absolute;
-  width: 759px;
-  height: 272px;
-  top: 538px;
-  left: 36px;
-  background-color: #eee;
+  top: 41px;
+  width: 46px;
 }
 
-.pay-buy-list .overlap-5 {
+.pay-buy-list .delete-button {
+  background-color: #ffffff;
+  height: 57px;
+  left: 0;
   position: absolute;
-  width: 26px;
-  height: 33px;
-  top: 25px;
-  left: 19px;
-  background-color: #fff;
-}
-
-.pay-buy-list .overlap-6 {
-  position: absolute;
-  width: 683px;
-  height: 45px;
-  top: 946px;
-  left: 69px;
-}
-
-.pay-buy-list .price {
-  left: 15px;
-  position: absolute;
-  width: 201px;
-  height: 45px;
   top: 0;
-  background-color: #d9d9d9;
-}
-
-.pay-buy-list .price-2 {
-  left: 241px;
-  position: absolute;
-  width: 201px;
-  height: 45px;
-  top: 0;
-  background-color: #d9d9d9;
-}
-
-.pay-buy-list .price-3 {
-  left: 467px;
-  position: absolute;
-  width: 201px;
-  height: 45px;
-  top: 0;
-  background-color: #d9d9d9;
+  width: 46px;
 }
 
 .pay-buy-list .text-wrapper-5 {
-  width: 231px;
-  top: 7px;
-  left: 0;
-  text-align: center;
-  white-space: nowrap;
-  position: absolute;
+  color: #000000;
   font-family: "Inter-Regular", Helvetica;
+  font-size: 44.2px;
   font-weight: 400;
-  color: #000;
-  font-size: 25.5px;
+  left: 7px;
   letter-spacing: 0;
   line-height: normal;
+  position: absolute;
+  top: 2px;
+  width: 39px;
+}
+
+.pay-buy-list .pay-item-2 {
+  background-color: #eeeeeeee;
+  height: 472px;
+  left: 62px;
+  position: absolute;
+  top: 1003px;
+  width: 1317px;
+}
+
+.pay-buy-list .overlap-5 {
+  height: 57px;
+  left: 32px;
+  position: absolute;
+  top: 43px;
+  width: 46px;
+}
+
+.pay-buy-list .overlap-6 {
+  height: 69px;
+  left: 186px;
+  position: absolute;
+  top: 1611px;
+  width: 1053px;
+}
+
+.pay-buy-list .price {
+  background-color: #d9d9d9;
+  height: 69px;
+  left: 24px;
+  position: absolute;
+  top: 0;
+  width: 310px;
+  font-size: 30px;
+}
+
+.pay-buy-list .price-2 {
+  background-color: #d9d9d9;
+  height: 69px;
+  left: 372px;
+  position: absolute;
+  top: 0;
+  width: 310px;
+  font-size: 30px;
+}
+
+.pay-buy-list .price-3 {
+  background-color: #d9d9d9;
+  height: 69px;
+  left: 720px;
+  position: absolute;
+  top: 0;
+  width: 310px;
+  font-size: 30px;
 }
 
 .pay-buy-list .text-wrapper-6 {
-  width: 231px;
-  top: 7px;
-  left: 226px;
-  text-align: center;
-  white-space: nowrap;
-  position: absolute;
+  color: #000000;
   font-family: "Inter-Regular", Helvetica;
+  font-size: 39.3px;
   font-weight: 400;
-  color: #000;
-  font-size: 25.5px;
+  left: 0;
   letter-spacing: 0;
   line-height: normal;
+  position: absolute;
+  text-align: center;
+  top: 11px;
+  white-space: nowrap;
+  width: 357px;
 }
 
 .pay-buy-list .text-wrapper-7 {
-  width: 231px;
-  top: 7px;
-  left: 452px;
-  text-align: center;
-  white-space: nowrap;
-  position: absolute;
+  color: #000000;
   font-family: "Inter-Regular", Helvetica;
+  font-size: 39.3px;
   font-weight: 400;
-  color: #000;
-  font-size: 25.5px;
+  left: 348px;
   letter-spacing: 0;
   line-height: normal;
+  position: absolute;
+  text-align: center;
+  top: 11px;
+  white-space: nowrap;
+  width: 357px;
 }
 
 .pay-buy-list .text-wrapper-8 {
-  width: 170px;
-  top: 141px;
-  left: 375px;
-  position: absolute;
+  color: #000000;
   font-family: "Inter-Regular", Helvetica;
+  font-size: 39.3px;
   font-weight: 400;
-  color: #000;
-  font-size: 25.5px;
+  left: 697px;
   letter-spacing: 0;
   line-height: normal;
-}
-
-.pay-buy-list .nav {
   position: absolute;
-  width: 764px;
-  height: 75px;
-  top: 19px;
-  left: 33px;
-  background-color: #eee;
-}
-
-.pay-buy-list .user {
-  position: absolute;
-  width: 139px;
-  height: 40px;
-  top: 20px;
-  left: 612px;
-  background-color: #fff;
-  overflow: hidden;
+  text-align: center;
+  top: 11px;
+  white-space: nowrap;
+  width: 357px;
 }
 
 .pay-buy-list .text-wrapper-9 {
-  width: 117px;
-  top: 4px;
-  left: 23px;
-  position: absolute;
+  color: #000000;
   font-family: "Inter-Regular", Helvetica;
+  font-size: 44.2px;
   font-weight: 400;
-  color: #000;
-  font-size: 25.5px;
+  left: 650px;
   letter-spacing: 0;
   line-height: normal;
+  position: absolute;
+  top: 315px;
+  width: 295px;
 }
 
-.pay-buy-list .logo {
+.pay-buy-list .nav {
+  background-color: #eeeeee;
+  height: 130px;
+  left: 57px;
   position: absolute;
-  width: 118px;
-  height: 46px;
-  top: 14px;
-  left: 12px;
-  background-color: #fff;
+  top: 103px;
+  width: 1325px;
+}
+
+.pay-buy-list .user {
+  background-color: #ffffff;
+  height: 69px;
+  left: 1062px;
   overflow: hidden;
+  position: absolute;
+  top: 34px;
+  width: 242px;
 }
 
 .pay-buy-list .text-wrapper-10 {
-  position: absolute;
-  width: 81px;
-  top: 6px;
-  left: 37px;
+  color: #000000;
   font-family: "Inter-Regular", Helvetica;
+  font-size: 44.2px;
   font-weight: 400;
-  color: #000;
-  font-size: 25.5px;
+  left: 39px;
   letter-spacing: 0;
   line-height: normal;
+  position: absolute;
+  top: 7px;
+  width: 203px;
+}
+
+.pay-buy-list .logo {
+  background-color: #ffffff;
+  height: 80px;
+  left: 21px;
+  overflow: hidden;
+  position: absolute;
+  top: 24px;
+  width: 205px;
+}
+
+.pay-buy-list .text-wrapper-11 {
+  color: #000000;
+  font-family: "Inter-Regular", Helvetica;
+  font-size: 44.2px;
+  font-weight: 400;
+  left: 64px;
+  letter-spacing: 0;
+  line-height: normal;
+  position: absolute;
+  top: 10px;
+  width: 141px;
 }
